fix sout errr